--- a/layouts/partials/home/hero.html
+++ b/layouts/partials/home/hero.html
@@ -47,7 +47,7 @@
                         {{ .Site.Params.Author.name | default .Site.Title }}
                     </h1>
                     {{ with .Site.Params.Author.headline }}
-                    <h2 class="mt-0 mb-0 text-xl text-neutral-300">
+                    <h2 class="mt-0 mb-0 text-xl">
                         {{ . | markdownify }}
                     </h2>
                     {{ end }}
